# 433FinalProject

./: .gitignore  README.md  hell.txt  index.html  plot.html  plot.py  pyproject.toml  requirements.txt  script.js  style.css
src/sensornetwork/: __init__.py
src/sensornetwork/db/: __init__.py  __main__.py  drop.sql  init.sql
src/sensornetwork/host/: __main__.py
src/sensornetwork/sensor/: __init__.py  __main__.py  ds18b20.py
src/sensornetwork/sensor/sensors/: __init__.py  ds18b20.py  humidity_sensor.py  light_sensor.py  sensor.py
src/sensornetwork/web/: __init__.py  __main__.py
src/sensornetwork/web/static/: __init__.py  script.js
src/sensornetwork/web/templates/: __init__.py  index.html  index.tpl
