[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sensornetwork"
authors = [
    {name = "Willow Ciesialka", email="wciesialka@gmail.com"}
]
requires-python = ">=3.9.2"
description = "CSCI 43300 Final Project."
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["sensornetwork*"]  # ["*"] by default

[tool.setuptools.package-data]
"sensornetwork.db" = ["*.sql"]
"sensornetwork.web.static" = ["*.*"]
"sensornetwork.web.templates" = ["*.*"]

[tool.setuptools.dynamic]
version = {attr = "sensornetwork.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}